add basic play rules

--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -16,24 +16,24 @@
       <div class="hiddenDiv">
         <div class = "row" id="topRow">
 
-          <div class = "col-md-4 ticTacToe" id="first" style="padding-right:20px; border-right: 1px solid #000000;"><p><span class="one_three">Click here</span></p></div>
-          <div class = "col-md-4 ticTacToe" id="first" style="padding-right:20px; border-right: 1px solid #000000;"><p><span class="two_three">Click here</span></p></div>
-          <div class = "col-md-4 ticTacToe" id="first"><p><span class="three_three">Click here</span></p></div>
+          <div class = "col-md-4 ticTacToe" id="one_three" style="padding-right:20px; border-right: 1px solid #000000;"><span class="one_three"><p>Click here</p></span></div>
+          <div class = "col-md-4 ticTacToe" id="two_three" style="padding-right:20px; border-right: 1px solid #000000;"><p><span class="two_three">Click here</span></p></div>
+          <div class = "col-md-4 ticTacToe" id="three_three"><p><span class="three_three">Click here</span></p></div>
         </div>
 
 
 
         <div class = "row">
-          <div class = "col-md-4 ticTacToe" style="padding-right:20px; border-right: 1px solid #000000;"><p><span class="one_two">Click here</span></p></div>
-          <div class = "col-md-4 ticTacToe" style="padding-right:20px; border-right: 1px solid #000000;"><p><span class="two_two">Click here</span></p></div>
-          <div class = "col-md-4 ticTacToe"><p><span class="three_two">Click here</span></p></div>
+          <div class = "col-md-4 ticTacToe" id="one_two" style="padding-right:20px; border-right: 1px solid #000000;"><p><span class="one_two">Click here</span></p></div>
+          <div class = "col-md-4 ticTacToe" id="two_two" style="padding-right:20px; border-right: 1px solid #000000;"><p><span class="two_two">Click here</span></p></div>
+          <div class = "col-md-4 ticTacToe" id="three_two"><p><span class="three_two">Click here</span></p></div>
 
         </div>
 
         <div class = "row">
-          <div class = "col-md-4 ticTacToe" style="padding-right:20px; border-right: 1px solid #000000;"><p><span class="one_one">Click here</span></p></div>
-          <div class = "col-md-4 ticTacToe" style="padding-right:20px; border-right: 1px solid #000000;"><p><span class="two_one">Click here</span></p></div>
-          <div class = "col-md-4 ticTacToe"><p><span class="three_one">Click here</span></p></div>
+          <div class = "col-md-4 ticTacToe" id="one_one" style="padding-right:20px; border-right: 1px solid #000000;"><p><span class="one_one">Click here</span></p></div>
+          <div class = "col-md-4 ticTacToe" id = "two_one" style="padding-right:20px; border-right: 1px solid #000000;"><p><span class="two_one">Click here</span></p></div>
+          <div class = "col-md-4 ticTacToe" id = "three_one"><p><span class="three_one">Click here</span></p></div>
         </div>
       </div>
     </div>
