--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -13,27 +13,38 @@
 
       <h1>Tic Tac Toe</h1>
 
-      <div class="hiddenDiv">
+      <div class="playerNumberButtons">
+        <h2>Welcome to tick, tack, toe</h2>
+        <button class="btn" id="onePlayer">Single Player</button>
+        <button class="btn" id="twoPlayer">Two Player</button>
+      </div>
+
+      <div class="XObuttons">
+        <button class="btn" id="X">X</button>
+        <button class="btn" id="O">O</button> 
+      </div>
+
+      <div class="hiddenDivGrid text-center">
         <div class = "row" id="topRow">
 
-          <div class = "col-md-4 ticTacToe" id="one_three" style="padding-right:20px; border-right: 1px solid #000000;"><span class="one_three"><p>Click here</p></span></div>
-          <div class = "col-md-4 ticTacToe" id="two_three" style="padding-right:20px; border-right: 1px solid #000000;"><p><span class="two_three">Click here</span></p></div>
-          <div class = "col-md-4 ticTacToe" id="three_three"><p><span class="three_three">Click here</span></p></div>
+          <div class = "col-md-4 col-lg-4 ticTacToe" id="one_three" style="padding-right:20px; border-right: 1px solid #000000;"><h1><span class="one_three">Click here</span></h1></div>
+          <div class = "col-md-4 col-lg-4 ticTacToe" id="two_three" style="padding-right:20px; border-right: 1px solid #000000;"><h1><span class="two_three">Click here</span></h1></div>
+          <div class = "col-md-4 col-lg-4 ticTacToe" id="three_three"><h1><span class="three_three">Click here</span></h1></div>
         </div>
 
 
 
         <div class = "row">
-          <div class = "col-md-4 ticTacToe" id="one_two" style="padding-right:20px; border-right: 1px solid #000000;"><p><span class="one_two">Click here</span></p></div>
-          <div class = "col-md-4 ticTacToe" id="two_two" style="padding-right:20px; border-right: 1px solid #000000;"><p><span class="two_two">Click here</span></p></div>
-          <div class = "col-md-4 ticTacToe" id="three_two"><p><span class="three_two">Click here</span></p></div>
+          <div class = "col-md-4 col-lg-4 ticTacToe" id="one_two" style="padding-right:20px; border-right: 1px solid #000000;"><h1><span class="one_two">Click here</span></h1></div>
+          <div class = "col-md-4 col-lg-4 ticTacToe" id="two_two" style="padding-right:20px; border-right: 1px solid #000000;"><h1><span class="two_two">Click here</span></h1></div>
+          <div class = "col-md-4 col-lg-4 ticTacToe" id="three_two"><h1><span class="three_two">Click here</span></h1></div>
 
         </div>
 
         <div class = "row">
-          <div class = "col-md-4 ticTacToe" id="one_one" style="padding-right:20px; border-right: 1px solid #000000;"><p><span class="one_one">Click here</span></p></div>
-          <div class = "col-md-4 ticTacToe" id = "two_one" style="padding-right:20px; border-right: 1px solid #000000;"><p><span class="two_one">Click here</span></p></div>
-          <div class = "col-md-4 ticTacToe" id = "three_one"><p><span class="three_one">Click here</span></p></div>
+          <div class = "col-md-4 col-lg-4 ticTacToe" id="one_one" style="padding-right:20px; border-right: 1px solid #000000;"><h1><span class="one_one">Click here</span></h1></div>
+          <div class = "col-md-4 col-lg-4 ticTacToe" id = "two_one" style="padding-right:20px; border-right: 1px solid #000000;"><h1><span class="two_one">Click here</span></h1></div>
+          <div class = "col-md-4 col-lg-4 ticTacToe" id = "three_one"><h1><span class="three_one">Click here</span></h1></div>
         </div>
       </div>
     </div>
