--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -11,17 +11,17 @@
 
     <div class = "container">
 
-      <h1>Tic Tac Toe</h1>
+      <h1 class="text-center">Tic Tac Toe</h1>
 
-      <div class="playerNumberButtons">
+      <div class="text-center playerNumberButtons">
         <h2>Welcome to tick, tack, toe</h2>
         <button class="btn" id="onePlayer">Single Player</button>
         <button class="btn" id="twoPlayer">Two Player</button>
       </div>
 
-      <div class="XObuttons">
+      <div class="text-center XObuttons">
         <button class="btn" id="X">X</button>
-        <button class="btn" id="O">O</button> 
+        <button class="btn" id="O">O</button>
       </div>
 
       <div class="hiddenDivGrid text-center">
