updated styles and fonts

--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -14,7 +14,7 @@
       <h1 class="text-center">Tic Tac Toe</h1>
 
       <div class="text-center playerNumberButtons">
-        <h2>Welcome to tick, tack, toe</h2>
+        <h2>Hi there!</h2>
         <button class="btn" id="onePlayer">Single Player</button>
         <button class="btn" id="twoPlayer">Two Player</button>
       </div>
