remove single player button

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
       <div class="text-center playerNumberButtons">
         <h2>Hi there!</h2>
-        <button class="btn" id="onePlayer">Single Player</button>
-        <button class="btn" id="twoPlayer">Two Player</button>
+        <!-- <button class="btn" id="onePlayer">Single Player</button> -->
+        <button class="btn" id="twoPlayer">Start</button>
+        <p>(two player)</p> 
       </div>
 
       <div class="text-center XObuttons">
